Check for username+password, return profile
